--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
       if: ${{ matrix.python-version == '3.9' }}
       run: python -m pip install git+https://github.com/SheffieldML/GPy.git@devel
 
+    - name: Install old pywinpty
+      if: ${{ matrix.python-version == '3.9' && matrix.runs-on == 'windows-latest' }}
+      run: python -m pip install wheel
+
     - name: Install PsyNeuLink
       run: python -m pip install git+https://github.com/PrincetonUniversity/PsyNeuLink.git@mdf
 
